--- a/style.css
+++ b/style.css
@@ -66,7 +66,11 @@ input{
     input{
         width:80%;
         font-family: var(--main-font);
-    
+    }
+
+    img{
+        width:78%;
+        margin:1%;
     }
 
     select{
@@ -129,7 +133,8 @@ footer{
   
   /* The dropdown container */
   .dropdown {
-    overflow: hidden;
+    overflow:scroll;
+    z-index: 1;
   }
 
   .Hpos{
