--- a/style.css
+++ b/style.css
@@ -133,11 +133,12 @@ footer{
   
   /* The dropdown container */
   .dropdown {
-    overflow:scroll;
+    overflow:hidden;
     z-index: 1;
   }
 
   .Hpos{
+    z-index:1;
     position: sticky; 
     top:5%;
     left:5%;
@@ -152,8 +153,8 @@ footer{
     background-color: inherit;
     font-family: inherit; 
     position: sticky; 
-    top:5%;
-    left:5%;
+    top:5;
+    left:5;
     z-index: 1;
   }
   
@@ -166,7 +167,7 @@ footer{
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 2;
   }
   
   /* Links inside the dropdown */
