--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1{
     height:20%;
 }
 
-form{
+.form{
     text-align: center;
     padding:4% auto;
     float:left;
@@ -131,61 +131,30 @@ footer{
     a{color:rgb(40, 40, 255); font-size: 1.3em;}
     a:active{color:blueviolet; font-size: 1.3em;}
   
-  /* The dropdown container */
-  .dropdown {
-    overflow:hidden;
-    z-index: 1;
-  }
-
-  .Hpos{
-    z-index:1;
-    position: sticky; 
-    top:5%;
-    left:5%;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 3em;
-    border: none;
-    margin:0;
-    outline: none;
-    background-color: inherit;
-    font-family: inherit; 
-    position: sticky; 
-    top:5;
-    left:5;
-    z-index: 1;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    top:5%;
-    left:5%;
-    position: sticky; 
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 2;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
+.topnav
+{
+    top:0;
+    position: sticky;
+    width:100%;
+    display: flex;
+    background-color: black;
+    color:white;
     text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+    margin-bottom: 1%;
+
+}
+
+.topnav a{
+    float:left;
+    padding:2%;
+    font-family: var(--main-font);
+    text-decoration: none;
+    color:white;
+
+}
+
+.topnav a:hover{
+    background-color: white;
+    color:black;
+    text-decoration: none;
+}
