--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ h1{
     overflow-x: scroll;
 }
 
+.img_holder::-webkit-scrollbar {
+    height: 2em;
+  }
+.img_holder::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+.img_holder::-webkit-scrollbar-thumb {
+    background: black;
+  }
+
 img{
     width:48%;
     margin:1%;
